# imgrep

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/imgrep/: main.py
